# bifrost

./: $null  .gitignore  .prettierrc  AGENTS.md  BIFROST_INSTALLATION.md  Makefile  QWEN.md  config.json  create-cert-and-sign.bat  fix_build.sh  import-and-sign.bat  pulse.yaml  test-config.json  test_coverage.sh  test_gorm_context.go
.beads/: config.yaml  issues.jsonl  last-touched  metadata.json
.beads/.br_history/: issues.20260413_195744_120277312.jsonl  issues.20260413_195752_121462668.jsonl  issues.20260413_195757_849438210.jsonl  issues.20260413_195802_431938141.jsonl  issues.20260413_195809_801163209.jsonl  issues.20260413_195816_879779679.jsonl  issues.20260413_200143_650715278.jsonl  issues.20260413_200314_678380102.jsonl  issues.20260413_200329_584556637.jsonl  issues.20260413_200903_426344002.jsonl  issues.20260413_215916_862254477.jsonl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: helm-release.yml  release-pipeline.yml
core/: bifrost.go  bifrost_test.go  changelog.md  go.mod  pluginpipelinerace_test.go  utils.go  utils_test.go
core/keyselectors/: weightedrandom_test.go
core/mcp/: agentadaptors.go  clientmanager.go  codemode.go  healthmonitor.go  init_test.go  interface.go  mcp.go  mcp_test.go  toolmanager.go  toolmanager_test.go  utils.go
core/schemas/: account.go  bifrost.go  chatcompletions.go  context.go  context_test.go  embedding.go  envvar.go  envvar_test.go  images.go  mcp.go  models.go  models_test.go  mux.go  oauth.go  plugin.go  provider.go  realtime.go  responses.go  trace.go  tracer.go  transcriptions.go  useragents.go  utils.go
docs/: active_context.md  docs.json  lessons-learned.md  session_summary.md
docs/changelogs/: ent-v1.3.17.mdx  ent-v1.4.0-prereelase1.mdx  ent-v1.4.0-prereelase2.mdx  v1.4.23.mdx  v1.5.0-prerelease1.mdx  v1.5.0-prerelease2.mdx
docs/cli-agents/: claude-code.mdx
docs/contributing/: setting-up-repo.mdx
docs/deployment-guides/: helm.mdx
docs/enterprise/: setting-up-okta.mdx  user-provisioning.mdx  (+1 more)
framework/: changelog.md  go.mod  go.sum  test_gorm_ctx2.go  test_gorm_ctx3.go  test_gorm_ctx4.go
helm-charts/: bifrost-2.0.15.tgz  bifrost-2.1.0-prerelease1.tgz  bifrost-2.1.0-prerelease2.tgz  bifrost-2.1.5.tgz  bifrost-2.1.6.tgz  index.yaml
scripts/: add-nvidia-provider.ps1  build-and-deploy.ps1  build-and-deploy.sh  build-debian-x64.sh  build-windows-release.bat  fix-config.js  fix-config.ps1  import-and-sign.ps1
terraform/: README.md
tests/: docker-compose.yml
tests/integrations/python/: config.json  config.yml  pyproject.toml
tests/integrations/python/tests/: conftest.py  test_anthropic.py  test_azure.py  test_bedrock.py  test_google.py  test_langchain.py  test_litellm.py  test_openai.py  test_pydanticai.py
tests/integrations/python/tests/utils/: common.py  config_loader.py  parametrize.py
transports/: Dockerfile  Dockerfile.local  changelog.md  config.schema.json  go.mod  go.sum  version
ui/: .prettierrc  README.md  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.mts  vite.config.ts  vitest.config.ts
(+1007 files in other folders)
